--- a/app/view/getting-started/models.phtml
+++ b/app/view/getting-started/models.phtml
@@ -11,33 +11,17 @@ endif; ?>
                         bare-bones data object that can be extended with whatever methods or properties you need
                         to work with your model. Data from the abstract model object is accessible via array access
                         and magic methods, and the model object is countable and iterable.</p>
+                    <p>There is also an abstract data model class <code class="inline-code">Pop\Model\AbstractDataModel</code> that more tightly
+                        integrates with a table class from the database. Using that allows you to quickly wire up data queries with the
+                        database and present them with your model.</p>
                     <pre><code class="language-php">namespace MyApp\Model;
 
-use Pop\Model\AbstractModel;
+use Pop\Model\AbstractDataModel;
 
-class Users extends AbstractModel
+class User extends AbstractDataModel
 {
 
-    public function getById($id)
-    {
-        // Get a user by ID
-    }
-
-    public function save($data)
-    {
-        // Save a new user
-    }
-
-    public function update($userId, $data)
-    {
-        // Update an existing user
-    }
-
-    public function delete($userId)
-    {
-        // Delete an existing user
-    }
-
 }</code><a href="#" title="Copy" class="copy-link" x-data="copyCode" x-on:click.prevent="copy($el)"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 relative"><path stroke-linecap="round" stroke-linejoin="round" d="M8.25 7.5V6.108c0-1.135.845-2.098 1.976-2.192.373-.03.748-.057 1.123-.08M15.75 18H18a2.25 2.25 0 002.25-2.25V6.108c0-1.135-.845-2.098-1.976-2.192a48.424 48.424 0 00-1.123-.08M15.75 18.75v-1.875a3.375 3.375 0 00-3.375-3.375h-1.5a1.125 1.125 0 01-1.125-1.125v-1.5A3.375 3.375 0 006.375 7.5H5.25m11.9-3.664A2.251 2.251 0 0015 2.25h-1.5a2.251 2.251 0 00-2.15 1.586m5.8 0c.065.21.1.433.1.664v.75h-6V4.5c0-.231.035-.454.1-.664M6.75 7.5H4.875c-.621 0-1.125.504-1.125 1.125v12c0 .621.504 1.125 1.125 1.125h9.75c.621 0 1.125-.504 1.125-1.125V16.5a9 9 0 00-9-9z" /></svg></a></pre>
+                    <p class="mt-4">These concepts are explored more in depth in the <a href="<?=$version; ?>/user-guide/mvc">User Guide > MVC</a> section.</p>
                 </div>
 <?php include __DIR__ . '/../inc/footer.phtml'; ?>
