--- a/app/view/inc/nav.phtml
+++ b/app/view/inc/nav.phtml
@@ -101,7 +101,12 @@
                                             <li class="mb-2"><a href="<?=$version; ?>/getting-started/kettle#migration-state">Migration State Storage</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="<?=$version; ?>/getting-started/kettle#creating">Creating App Files</a></li>
+                                    <li>
+                                        <a href="<?=$version; ?>/getting-started/kettle#creating">Creating App Files</a>
+                                        <ul class="ml-4 pt-2 pb-1">
+                                            <li class="mb-2"><a href="<?=$version; ?>/getting-started/kettle#data-model">Data Model</a></li>
+                                        </ul>
+                                    </li>
                                     <li><a href="<?=$version; ?>/getting-started/kettle#web-server">Web Server</a></li>
                                     <li><a href="<?=$version; ?>/getting-started/kettle#accessing">Accessing the App</a></li>
                                     <li><a href="<?=$version; ?>/getting-started/kettle#windows">Windows</a></li>
