--- a/app/view/getting-started/kettle.phtml
+++ b/app/view/getting-started/kettle.phtml
@@ -234,10 +234,18 @@ class MyFirstMigration5dd822cdede29 extends AbstractMigration
                     <p>You can create skeleton application files with the <code class="inline-code">create</code> commands to assist you in wiring up various
                         MVC-based components, such as models, views and controllers:</p>
                     <pre><code class="language-bash">./kettle create:ctrl [--web] [--api] [--cli] &lt;ctrl&gt;
-./kettle create:model &lt;model&gt;
+./kettle create:model [-d|--data] &lt;model&gt;
 ./kettle create:view &lt;view&gt;</code></pre>
                     <p>Once the respective class files or view scripts are created in the appropriate folders, you can then
                         open them up and begin writing your application code.</p>
+                    <h5 id="data-model">Data Model</h5>
+                    <p>The <code class="inline-code">--data</code> option for the <code class="inline-code">create:model</code> command creates a model class that extends the
+                            <code class="inline-code">Pop\Model\AbstractDataModel</code> class, as well as a table class to interface with the corresponding
+                    table in the database. For example, assuming the namespace of the applicaton is <code class="inline-code">MyApp</code>, the command:</p>
+                    <pre><code class="language-bash">./kettle create:model --data User</code></pre>
+                    <p>will create class files for <code class="inline-code">MyApp\Model\User</code> and <code class="inline-code">MyApp\Table\Users</code>. From there, using the model
+                    class, you can begin to store and retrieve data from the <code class="inline-code">users</code> table in the database with very little
+                        additional coding.</p>
                     <h4 id="web-server">Web Server</h4>
                     <p><code class="inline-code">pop-kettle</code> also provides a simple way to run PHP's built-in web-server, by running the command:</p>
                     <pre><code class="language-bash">./kettle serve [--host=] [--port=] [--folder=]</code><a href="#" title="Copy" class="copy-link" x-data="copyCode" x-on:click.prevent="copy($el)"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 relative"><path stroke-linecap="round" stroke-linejoin="round" d="M8.25 7.5V6.108c0-1.135.845-2.098 1.976-2.192.373-.03.748-.057 1.123-.08M15.75 18H18a2.25 2.25 0 002.25-2.25V6.108c0-1.135-.845-2.098-1.976-2.192a48.424 48.424 0 00-1.123-.08M15.75 18.75v-1.875a3.375 3.375 0 00-3.375-3.375h-1.5a1.125 1.125 0 01-1.125-1.125v-1.5A3.375 3.375 0 006.375 7.5H5.25m11.9-3.664A2.251 2.251 0 0015 2.25h-1.5a2.251 2.251 0 00-2.15 1.586m5.8 0c.065.21.1.433.1.664v.75h-6V4.5c0-.231.035-.454.1-.664M6.75 7.5H4.875c-.621 0-1.125.504-1.125 1.125v12c0 .621.504 1.125 1.125 1.125h9.75c.621 0 1.125-.504 1.125-1.125V16.5a9 9 0 00-9-9z" /></svg></a></pre>
