--- a/app/view/changelog.phtml
+++ b/app/view/changelog.phtml
@@ -4,11 +4,12 @@
                 <div class="main-content">
                     <h2><?=$title; ?></h2>
                     <h4 id="5.1.0">5.1.0</h4>
-                    <h6>(12/12/2023)</h6>
+                    <h6>(12/18/2023)</h6>
                     <ul class="list-disc text-sm ml-8 mb-4 mt-4">
                         <li class="mb-2">Improved transaction support in <code class="inline-code">pop-db</code></li>
                         <li class="mb-2">Added individual query methods to the database adapters in <code class="inline-code">pop-db</code></li>
                         <li class="mb-2">Added the <code class="inline-code">Pop\App</code> helper class in <code class="inline-code">popphp</code></li>
+                        <li class="mb-2">Added the <code class="inline-code">Pop\Model\AbstractDataModel</code> class in <code class="inline-code">popphp</code></li>
                         <li class="mb-2">Incorporated <code class="inline-code">vlucas/phpdotenv</code> in <code class="inline-code">popphp</code> to track application-specific variables</li>
                         <li class="mb-2">Improved application handling and support with <code class="inline-code">pop-kettle</code></li>
                         <li class="mb-2">Improved color and styling support in <code class="inline-code">pop-console</code></li>
