Update kettle docs

--- a/app/view/inc/nav.phtml
+++ b/app/view/inc/nav.phtml
@@ -109,6 +109,7 @@
                                     </li>
                                     <li><a href="<?=$version; ?>/getting-started/kettle#web-server">Web Server</a></li>
                                     <li><a href="<?=$version; ?>/getting-started/kettle#accessing">Accessing the App</a></li>
+                                    <li><a href="<?=$version; ?>/getting-started/kettle#shell-completion">Shell Completion</a></li>
                                     <li><a href="<?=$version; ?>/getting-started/kettle#windows">Windows</a></li>
                                 </ul>
                             </li>
