Update PDF docs

--- a/app/view/inc/nav.phtml
+++ b/app/view/inc/nav.phtml
@@ -389,6 +389,7 @@
                                             <li class="mb-2"><a href="<?=$version; ?>/user-guide/pdfs#string-width">String Width</a></li>
                                         </ul>
                                     </li>
+                                    <li><a href="<?=$version; ?>/user-guide/pdfs#styles">Styles</a></li>
                                     <li>
                                         <a href="<?=$version; ?>/user-guide/pdfs#images">Images</a>
                                         <ul class="ml-4 pt-2 pb-1">
