--- a/app/view/user-guide/pdfs.phtml
+++ b/app/view/user-guide/pdfs.phtml
@@ -361,7 +361,21 @@ var_dump($width);</code><a href="#" title="Copy" class="copy-link" x-data="copyC
                     <p>This will give us the approximate width in points of the string <code class="inline-code">Hello World</code> in
                         12pt Helvetica Bold:</p>
                     <pre><code class="language-plaintext">float(66.672)</code></pre>
-                    <h4 id="images" class="mt-4">Images</h4>
+                    <h4 id="styles" class="mt-4">Styles</h4>
+                    <p>Style objects can be added to the document to provide easier management of text and font styles used in multiple
+                        places across the PDF document and its pages.</p>
+                    <pre><code class="language-php">use Pop\Pdf\Document;
+use Pop\Pdf\Document\Font;
+
+$document = new Document();
+$document->addFont(Font::ARIAL);
+$document->createStyle('normal', Font::ARIAL, 12);
+
+$page = $document->createPage(Page::LETTER);
+$page->addText($text, 'normal', 50, 742); // The second parameter can either be a font or a reference to a style</code><a href="#" title="Copy" class="copy-link" x-data="copyCode" x-on:click.prevent="copy($el)"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 relative"><path stroke-linecap="round" stroke-linejoin="round" d="M8.25 7.5V6.108c0-1.135.845-2.098 1.976-2.192.373-.03.748-.057 1.123-.08M15.75 18H18a2.25 2.25 0 002.25-2.25V6.108c0-1.135-.845-2.098-1.976-2.192a48.424 48.424 0 00-1.123-.08M15.75 18.75v-1.875a3.375 3.375 0 00-3.375-3.375h-1.5a1.125 1.125 0 01-1.125-1.125v-1.5A3.375 3.375 0 006.375 7.5H5.25m11.9-3.664A2.251 2.251 0 0015 2.25h-1.5a2.251 2.251 0 00-2.15 1.586m5.8 0c.065.21.1.433.1.664v.75h-6V4.5c0-.231.035-.454.1-.664M6.75 7.5H4.875c-.621 0-1.125.504-1.125 1.125v12c0 .621.504 1.125 1.125 1.125h9.75c.621 0 1.125-.504 1.125-1.125V16.5a9 9 0 00-9-9z" /></svg></a></pre>
+                    <p>So any text added to any page referencing the same style can easily be changed across the entire document by only
+                        changing the style object.</p>
+                    <h4 id="images">Images</h4>
                     <p>Images can be easily added to page objects. However, in a PDF document, the origin of an
                     image is the bottom of the image. You will have to consider how the image's height affects
                         the placement of the image on the page in relation to the page origin.</p>
