--- a/app/view/changelog.phtml
+++ b/app/view/changelog.phtml
@@ -3,6 +3,29 @@
             <main class="col-right bg-white overflow-y-auto pl-24 pr-24 pt-12 pb-12 max-[976px]:pl-12 max-[976px]:pr-12 max-[976px]:pt-4 max-[976px]:pb-4 dark:text-gray-300 dark:bg-gray-900">
                 <div class="main-content">
                     <h2><?=$title; ?></h2>
+                    <h4 id="5.2.0">5.2.0</h4>
+                    <h6>(3/4/2024)</h6>
+                    <ul class="list-disc text-sm ml-8 mb-4 mt-4">
+                        <li class="mb-2">Added bash completion to <code class="inline-code">pop-kettle</code></li>
+                        <li class="mb-2">Added style object and functionality to <code class="inline-code">pop-pdf</code></li>
+                        <li class="mb-2">
+                            <code class="inline-code">popcorn</code>
+                            <ul class="list-disc text-sm ml-8 mb-2 mt-2">
+                                <li class="mb-2">Added support for custom methods in the config</li>
+                                <li class="mb-2">Improved route prefixes</li>
+                            </ul>
+                        </li>
+                        <li class="mb-2">
+                            <code class="inline-code">pop-form</code>
+                            <ul class="list-disc text-sm ml-8 mb-2 mt-2">
+                                <li class="mb-2">Improved error message grouping and display</li>
+                                <li class="mb-2">Improved append/prepend functionality with form field elements</li>
+                            </ul>
+                        </li>
+                        <li class="mb-2">Improved ACL policy support in <code class="inline-code">pop-nav</code></li>
+                        <li class="mb-2">Upgraded the "options" parameter - renamed "omit" to "exclude" and added "include" in <code class="inline-code">pop-csv</code></li>
+                        <li class="mb-2">Added <code class="inline-code">outputToRawString</code> method in <code class="inline-code">pop-image</code></li>
+                    </ul>
                     <h4 id="5.1.0">5.1.0</h4>
                     <h6>(12/18/2023)</h6>
                     <ul class="list-disc text-sm ml-8 mb-4 mt-4">
