--- a/app/view/changelog.phtml
+++ b/app/view/changelog.phtml
@@ -3,6 +3,19 @@
             <main class="col-right bg-white overflow-y-auto pl-24 pr-24 pt-12 pb-12 max-[976px]:pl-12 max-[976px]:pr-12 max-[976px]:pt-4 max-[976px]:pb-4 dark:text-gray-300 dark:bg-gray-900">
                 <div class="main-content">
                     <h2><?=$title; ?></h2>
+                    <h4 id="5.3.0">5.3.0</h4>
+                    <h6>(4/1/2024)</h6>
+                    <ul class="list-disc text-sm ml-8 mb-4 mt-4">
+                        <li class="mb-2">
+                            <code class="inline-code">pop-utils</code>
+                            <ul class="list-disc text-sm ml-8 mb-2 mt-2">
+                                <li class="mb-2">Added helper class and functions</li>
+                                <li class="mb-2">Added autoloading of helper functions to main application object</li>
+                                <li class="mb-2">Added array helper class</li>
+                                <li class="mb-2">Refactored existing array classes for better interoperability</li>
+                            </ul>
+                        </li>
+                    </ul>
                     <h4 id="5.2.0">5.2.0</h4>
                     <h6>(3/4/2024)</h6>
                     <ul class="list-disc text-sm ml-8 mb-4 mt-4">
