--- a/app/view/inc/nav.phtml
+++ b/app/view/inc/nav.phtml
@@ -365,6 +365,7 @@
                                             <li class="mb-2"><a href="<?=$version; ?>/user-guide/pdfs#import-from-file">Import from File</a></li>
                                             <li class="mb-2"><a href="<?=$version; ?>/user-guide/pdfs#import-from-raw-data">Import from Raw Data</a></li>
                                             <li class="mb-2"><a href="<?=$version; ?>/user-guide/pdfs#import-from-images">Import from Images</a></li>
+                                            <li class="mb-2"><a href="<?=$version; ?>/user-guide/pdfs#extract-text">Extract Text</a></li>
                                         </ul>
                                     </li>
                                     <li>
