--- a/app/view/changelog.phtml
+++ b/app/view/changelog.phtml
@@ -3,6 +3,22 @@
             <main class="col-right bg-white overflow-y-auto pl-24 pr-24 pt-12 pb-12 max-[976px]:pl-12 max-[976px]:pr-12 max-[976px]:pt-4 max-[976px]:pb-4 dark:text-gray-300 dark:bg-gray-900">
                 <div class="main-content">
                     <h2><?=$title; ?></h2>
+                    <h4 id="5.4.0">5.4.0</h4>
+                    <h6>(9/10/2024)</h6>
+                    <ul class="list-disc text-sm ml-8 mb-4 mt-4">
+                        <li class="mb-2">
+                            Updates & Improvements to the following packages:
+                            <ul class="list-disc text-sm ml-8 mb-2 mt-2">
+                                <li class="mb-2"><code class="inline-code">popphp</code> - bug fix</li>
+                                <li class="mb-2"><code class="inline-code">pop-dom</code> - bug fix</li>
+                                <li class="mb-2"><code class="inline-code">pop-form</code> - bug fix</li>
+                                <li class="mb-2"><code class="inline-code">pop-http</code> - bug fix</li>
+                                <li class="mb-2"><code class="inline-code">pop-pdf</code> - Added support for text extraction</li>
+                                <li class="mb-2"><code class="inline-code">pop-utils</code> - Added DateTimeTrait</li>
+                                <li class="mb-2"><code class="inline-code">pop-validator</code> - Added DateTime validators</li>
+                            </ul>
+                        </li>
+                    </ul>
                     <h4 id="5.3.1">5.3.1</h4>
                     <h6>(5/28/2024)</h6>
                     <ul class="list-disc text-sm ml-8 mb-4 mt-4">
