--- a/app/view/inc/nav.phtml
+++ b/app/view/inc/nav.phtml
@@ -463,6 +463,7 @@
                     <li x-data="{open: <?=$nav6Active; ?>}">
                         <a href="<?=$version; ?>/changelog">Changelog</a>
                         <ul x-show="open" x-transition:enter.duration.200ms x-transition:leave.duration.200ms x-cloak>
+                            <li><a href="<?=$version; ?>/changelog#5.5.0">5.5.0</a></li>
                             <li><a href="<?=$version; ?>/changelog#5.4.0">5.4.0</a></li>
                             <li><a href="<?=$version; ?>/changelog#5.3.1">5.3.1</a></li>
                             <li><a href="<?=$version; ?>/changelog#5.3.0">5.3.0</a></li>
