--- a/app/view/installation/requirements.phtml
+++ b/app/view/installation/requirements.phtml
@@ -6,9 +6,8 @@
     include __DIR__ . '/../inc/breadcrumb.phtml';
 endif; ?>
                     <h2><?=$title; ?></h2>
-                    <p>At a minimum, the Pop PHP Framework requires <strong>PHP 8.1</strong>, but it has been built for and tested with <strong>PHP 8.2</strong>.
-                        So the only true requirement is that to have at least <strong>PHP 8.1</strong> installed in the environment.</p>
-                    <p><em>As of Pop PHP Framework version 5.0.0, PHP 7.4 is no longer supported.</em></p>
+                    <p>At a minimum, the Pop PHP Framework requires at least <strong>PHP 8.2</strong>, but it has been built for and tested with <strong>PHP 8.3</strong> as well.
+                    <em>As of Pop PHP Framework version 5.0.0, PHP 7.4 is no longer supported.</em></p>
                     <h4>Recommendations</h4>
                     <p>Various components of the Pop PHP Framework require different PHP extensions and components to function correctly. If you wish to take advantage of the many components of Pop PHP, the following is recommended:</p>
                     <h5>Databases:</h5>
